[package]
name = "buffer-be"
version = "0.1.0"
authors = ["ilmannafian04 <milmannafian04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-redis = "0.9.2"
actix-session = "0.4.1"
actix-web = "3.3.2"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde", "std"] }
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
log = "0.4.14"
openssl = "0.10.33"
serde = { version = "1.0.125", features = ["derive"] }
